--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <i class="ri-film-fill"></i>
               </span>
               <span class="button-label">
-                <a href="">FerretSoftware Clips</a>
+                <a href="https://ferretsoftware-clips.vercel.app/">FerretSoftware Clips</a>
               </span>
               <span class="button-right-section"></span>
             </div>
