--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <a href="https://x.com/reziakti/">
               <i class="ri-twitter-x-line ri-2x"></i>
             </a>
-            <a href="www.youtube.com/@reziakti">
+            <a href="https://www.youtube.com/@reziakti">
               <i class="ri-youtube-fill ri-2x"></i>
             </a>
           </div>
@@ -77,7 +77,7 @@
                 <i class="ri-github-fill"></i>
               </span>
               <span class="button-label">
-                <a href="https://github.com/Rezinya/solitaire/tree/master/Assets/Sprites">Card Deck Pixel Art</a>
+                <a href="https://github.com/Rezianna/solitaire/tree/master/Assets/Sprites">Card Deck Pixel Art</a>
               </span>
               <span class="button-right-section"></span>
             </div>
@@ -86,4 +86,5 @@
       </div>
     </div>
   </body>
+
 </html>
